[project]
name = "my-rag-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.20",
    "fastapi>=0.116.1",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-huggingface>=0.3.1",
    "mcp-server>=0.1.4",
    "mcp[cli]>=1.13.1",
    "pandas>=2.3.2",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "transformers>=4.56.0",
    "uvicorn>=0.35.0",
]
